[tool.poetry]
name = "nvim_venv"
version = "0.1.0"
description = ""
authors = ["Jim Pelton <jimpelton@blacksagetech.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pynvim = "^0.4.3"
black = { version = "21.6b0", allow-prereleases = true }
isort = "^5.9.1"
mypy = "^0.910"

[tool.black]
line-length = 99
target-version = ['py10']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
